overflow fix/added some meta tags

--- a/style/normalize.css
+++ b/style/normalize.css
@@ -5,6 +5,7 @@ html {
   }
   
   body {
+    overflow: hidden;
     box-sizing: border-box;
     margin: 0;
   }
