--- a/style/style.css
+++ b/style/style.css
@@ -275,8 +275,8 @@ header {
     padding: 0;
 }
 
-.more-news > article {
-    margin-top: 41px;
+.more-news-article-section > article {
+    margin-top: 40px;
 }
 
 article > h3 {
